--- a/.npmignore
+++ b/.npmignore
@@ -25,6 +25,9 @@ FAQ.md
 TODO.md
 ROADMAP.md
 
+# TODO: once we start compiling native add-ons, we need to remove this exclusion...
+Makefile
+
 # Directories #
 ###############
 .circleci/
