Add stdlib top-level namespace deps

--- a/package.json
+++ b/package.json
@@ -52,6 +52,42 @@
     "url": "https://github.com/stdlib-js/stdlib/issues"
   },
   "dependencies": {
+    "@stdlib/array": "git+https://github.com/stdlib-js/array.git",
+    "@stdlib/assert": "git+https://github.com/stdlib-js/assert.git",
+    "@stdlib/bench": "git+https://github.com/stdlib-js/bench.git",
+    "@stdlib/blas": "git+https://github.com/stdlib-js/blas.git",
+    "@stdlib/bigint": "git+https://github.com/stdlib-js/bigint.git",
+    "@stdlib/buffer": "git+https://github.com/stdlib-js/buffer.git",
+    "@stdlib/cli": "git+https://github.com/stdlib-js/cli.git",
+    "@stdlib/complex": "git+https://github.com/stdlib-js/complex.git",
+    "@stdlib/constants": "git+https://github.com/stdlib-js/constants.git",
+    "@stdlib/datasets": "git+https://github.com/stdlib-js/datasets.git",
+    "@stdlib/error": "git+https://github.com/stdlib-js/error.git",
+    "@stdlib/fs": "git+https://github.com/stdlib-js/fs.git",
+    "@stdlib/iter": "git+https://github.com/stdlib-js/iter.git",
+    "@stdlib/math": "git+https://github.com/stdlib-js/math.git",
+    "@stdlib/ml": "git+https://github.com/stdlib-js/ml.git",
+    "@stdlib/namespace": "git+https://github.com/stdlib-js/namespace.git",
+    "@stdlib/ndarray": "git+https://github.com/stdlib-js/ndarray.git",
+    "@stdlib/net": "git+https://github.com/stdlib-js/net.git",
+    "@stdlib/nlp": "git+https://github.com/stdlib-js/nlp.git",
+    "@stdlib/number": "git+https://github.com/stdlib-js/number.git",
+    "@stdlib/os": "git+https://github.com/stdlib-js/os.git",
+    "@stdlib/plot": "git+https://github.com/stdlib-js/plot.git",
+    "@stdlib/process": "git+https://github.com/stdlib-js/process.git",
+    "@stdlib/proxy": "git+https://github.com/stdlib-js/proxy.git",
+    "@stdlib/random": "git+https://github.com/stdlib-js/random.git",
+    "@stdlib/regexp": "git+https://github.com/stdlib-js/regexp.git",
+    "@stdlib/repl": "git+https://github.com/stdlib-js/repl.git",
+    "@stdlib/simulate": "git+https://github.com/stdlib-js/simulate.git",
+    "@stdlib/stats": "git+https://github.com/stdlib-js/stats.git",
+    "@stdlib/streams": "git+https://github.com/stdlib-js/streams.git",
+    "@stdlib/strided": "git+https://github.com/stdlib-js/strided.git",
+    "@stdlib/string": "git+https://github.com/stdlib-js/string.git",
+    "@stdlib/symbol": "git+https://github.com/stdlib-js/symbol.git",
+    "@stdlib/time": "git+https://github.com/stdlib-js/time.git",
+    "@stdlib/types": "git+https://github.com/stdlib-js/types.git",
+    "@stdlib/utils": "git+https://github.com/stdlib-js/utils.git",
     "acorn": "^8.1.0",
     "acorn-loose": "^8.0.2",
     "acorn-walk": "^8.0.2",
