--- a/tools/make/lib/install/Makefile
+++ b/tools/make/lib/install/Makefile
@@ -19,6 +19,7 @@
 # DEPENDENCIES #
 
 # Note: keep in alphabetical order...
+include $(TOOLS_MAKE_LIB_DIR)/install/boost.mk
 include $(TOOLS_MAKE_LIB_DIR)/install/electron.mk
 include $(TOOLS_MAKE_LIB_DIR)/install/node.mk
 
