Move deps check to lint folder

--- a/tools/make/lib/lint/Makefile
+++ b/tools/make/lib/lint/Makefile
@@ -32,6 +32,7 @@ include $(TOOLS_MAKE_LIB_DIR)/lint/r/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/lint/repl_help.mk
 include $(TOOLS_MAKE_LIB_DIR)/lint/shell/Makefile
 include $(TOOLS_MAKE_LIB_DIR)/lint/typescript/Makefile
+include $(TOOLS_MAKE_LIB_DIR)/lint/updates.mk
 
 
 # RULES #
