--- a/.github/workflows/standalone_test.yml
+++ b/.github/workflows/standalone_test.yml
@@ -69,10 +69,10 @@ jobs:
           node-version: 15
         timeout-minutes: 5
 
-      # Install dependencies:
+      # Install dependencies (accounting for possible network failures, etc, when installing node module dependencies):
       - name: 'Install dependencies'
         run: |
-          npm install
+          make install-node-modules || make install-node-modules || make install-node-modules
         timeout-minutes: 15
 
       # Trigger standalone package tests:
