--- a/.github/workflows/update_namespace_definitions.yml
+++ b/.github/workflows/update_namespace_definitions.yml
@@ -60,10 +60,10 @@ jobs:
           node-version: 15
         timeout-minutes: 5
 
-      # Install dependencies:
+      # Install dependencies (accounting for possible network failures, etc, when installing node module dependencies):
       - name: 'Install dependencies'
         run: |
-          make install-node-modules
+          make install-node-modules || make install-node-modules || make install-node-modules
         timeout-minutes: 15
 
       # Update namespace Typescript definitions:
