--- a/.github/workflows/standalone_test.yml
+++ b/.github/workflows/standalone_test.yml
@@ -40,7 +40,7 @@ jobs:
   trigger:
 
     # Define a display name:
-    name: "Trigger Tests"
+    name: 'Trigger Tests'
 
     # Define the type of virtual host machine:
     runs-on: ubuntu-latest
