--- a/.github/workflows/namespace_declarations.yml
+++ b/.github/workflows/namespace_declarations.yml
@@ -21,6 +21,13 @@ name: namespace_declarations
 
 # Workflow triggers:
 on:
+  push:
+    branches:
+      - develop
+    paths:
+      # List paths for which changes should trigger this workflow:
+      - 'lib/**/types/index.d.ts'
+
   # Allow the workflow to be manually run:
   workflow_dispatch:
 
