--- a/.github/workflows/namespace_declarations.yml
+++ b/.github/workflows/namespace_declarations.yml
@@ -89,6 +89,7 @@ jobs:
             -   updates namespace TypeScript declarations
 
           commit-message: 'Update namespace TypeScript declarations'
+          committer: 'stdlib-bot <noreply@stdlib.io>'
           labels: |
             documentation
             automated-pr
