Reorganize and split into separate files

--- a/tools/make/lib/help/Makefile
+++ b/tools/make/lib/help/Makefile
@@ -19,5 +19,7 @@
 # DEPENDENCIES #
 
 # Note: keep in alphabetical order...
+include $(TOOLS_MAKE_LIB_DIR)/help/assert.mk
 include $(TOOLS_MAKE_LIB_DIR)/help/debug.mk
+include $(TOOLS_MAKE_LIB_DIR)/help/diagnostics.mk
 include $(TOOLS_MAKE_LIB_DIR)/help/help.mk
