--- a/.github/workflows/markdown_tocs.yml
+++ b/.github/workflows/markdown_tocs.yml
@@ -75,7 +75,8 @@ jobs:
       # Update namespace table of contents in README.md files:
       - name: 'Update tables of contents'
         run: |
-          files=$( make list-pkgs-namespaces | sed 's/.*/lib\/node_modules\/&\/README.md/' | tr '\n' ' ' ); make markdown-namespace-tocs-files FILES=$files && make markdown-pkg-urls-files FILES=$files
+          make markdown-namespace-tocs-files FILES="$( make list-pkgs-namespaces | sed 's/.*/lib\/node_modules\/&\/README.md/' | tr '\n' ' ' )"
+          make markdown-pkg-urls-files FILES="$( make list-pkgs-namespaces | sed 's/.*/lib\/node_modules\/&\/README.md/' | tr '\n' ' ' )"
         timeout-minutes: 15
 
       # Create a pull request with the updated tables of contents:
