--- a/.github/workflows/markdown_equations.yml
+++ b/.github/workflows/markdown_equations.yml
@@ -79,8 +79,10 @@ jobs:
 
       # Generate and commit equation SVG files for README.md files:
       - name: 'Generate and commit equation SVG files'
+        env:
+          CHANGED_PACKAGES: ${{ join( fromJSON( steps.changed-packages.outputs.packages ), '\n' )}}
         run: |
-          files=$(${{ join( fromJSON( steps.changed-packages.outputs.packages ), '\n' )}} | sed 's/.*/lib\/node_modules\/&\/README.md/' | tr '\n' ' ' )
+          files=$( echo "$CHANGED_PACKAGES" | sed 's/.*/lib\/node_modules\/&\/README.md/' | tr '\n' ' ' )
           echo $files
           make markdown-svg-equations-files FILES=$files
           git config --local user.email "noreply@stdlib.io"
