--- a/.github/workflows/markdown_equations.yml
+++ b/.github/workflows/markdown_equations.yml
@@ -50,8 +50,8 @@ jobs:
           # Specify whether to remove untracked files before checking out the repository:
           clean: true
 
-          # Limit clone depth to the most recent commit:
-          fetch-depth: 1
+          # Limit clone depth to the most recent 100 commits:
+          fetch-depth: 100
 
           # Specify whether to download Git-LFS files:
           lfs: false
